tests/specs/check/check_npm_install_diagnostics/main.out
TS2592 [ERROR]: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery` and then add 'jquery' to the types field in your tsconfig.
$;
^
    at file://[WILDCARD]/main.ts:1:1

error: Type checking failed.
